# CineSort

./: .codecov.yml  .coderabbit.yaml  .deepsource.toml  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  .sourcery.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CineSort.exe.manifest  CineSort.spec  LICENSE  README.md  README_FR.txt  SECURITY.md  app.py  build_windows.bat  check_project.bat  ci_log.txt  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-preview.txt  requirements.txt  settings.json.example  version_info.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  audit-prompt.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: actionlint.yml  audit-module.yml  bandit.yml  ci.yml  claude.yml  codeql.yml  dependabot-auto-merge.yml  gitleaks.yml  labeler.yml  link-check.yml  mypy.yml  pip-audit.yml  pr-title-lint.yml  release-drafter.yml  stale.yml  (+2 more)
cinesort/: __init__.py
docs/: EXPORT_FORMAT.md  MANUAL.md  README_DEV.md  RELEASE.md  TROUBLESHOOTING.md  architecture.mmd  i18n.md  parity-report.md
locales/: en.json  fr.json
runtime_hooks/: splash_hook.py
scripts/: __init__.py  _phase10_compat_callers.py  _phase10_lazy_audit.py  capture_readme_screenshots.py  capture_ui_preview.py  check_python_compile.py  combine_themes_grid.py  convert_lpips_to_onnx.py  dedup_create_file_86.py  dedup_find_free_port_86.py  dedup_wait_helpers_86.py  fix_patch_object_84.py  fix_remaining_assertions_84.py  gen_endpoints_doc.py  generate_icon.py  measure_codebase_health.py  migrate_js_to_facades_84.py  migrate_monkeypatch_86.py  migrate_py_to_facades_84.py  package_zip.py  privatize_cinesort_api_84.py  run_lighthouse.py  run_live_verification.py  run_ui_preview.py  sign_windows_release.ps1  visual_check_ui_preview.py
tests/: _helpers.py  conftest.py  test_accessibility_v5.py  test_api_bridge_lot3.py  test_api_observability.py  test_app_bridge_smoke.py  test_apply_atomicity.py  test_apply_audit.py  test_apply_disk_check.py  test_apply_preview.py  test_apply_robustness.py  test_audio_analysis.py  test_audio_fingerprint.py  test_audit_fixes.py  test_auto_install.py  test_auto_quarantine_corrupted.py  test_axe_dashboard.py  test_backend_flow.py  test_calibration.py  test_candidate_posters.py  test_cinesort_api_email.py  test_cinesort_api_facades.py  test_cinesort_api_misc.py  test_cinesort_api_plex.py  test_cinesort_api_plugins.py  test_cinesort_api_radarr.py  test_cinesort_api_snapshot.py  test_circuit_breaker.py  test_composite_score_toggle.py  test_composite_score_v2.py  test_concurrency.py  test_conftest_fixtures.py  test_contrast_wcag.py  test_core_heuristics.py  test_critical_flow_integration.py  test_custom_rules.py  test_custom_rules_ui.py  test_dashboard.py  test_dashboard_cache.py  test_dashboard_infra.py  (+226 more)
web/: app.js  index.html  index_preview.html  splash.html  styles.css  themes.css
(+584 files in other folders)
